<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DarkKat Settings</string>
    <string name="settings_title">Settings</string>
    <string name="reset">Reset</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">cancel</string>
    <string name="dlg_dslv_reset_message">Reset all entries to default?</string>
    <string name="dlg_reset_values_message">Reset values to\nAndroid- or DarkKat default?</string>
    <string name="dlg_reset_colors_message">Reset colors to\nAndroid- or DarkKat default?</string>
    <string name="dlg_reset_theme_default_colors_message">Reset colors to theme default?</string>
    <string name="dlg_reset_android">Android</string>
    <string name="dlg_reset_darkkat">DarkKat</string>
    <string name="action_show_detailed_weather_view_title">Show detailed weather view</string>
    <string name="lock_screen_title">Lock screen</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_expanded_title">Status bar expanded</string>
    <string name="navigation_bar_title">Navigation bar</string>
    <string name="recents_title">Recents</string>
    <string name="notifications_title">Notifications</string>
    <string name="weather_title">Weather</string>
    <string name="qs_title">Quick settings</string>
    <string name="detailed_weather_view_title">Detailed weather view</string>
    <string name="weather_service_missing_summary">\'DK Weather Service\' is not installed.\nTo use the weather feature, the app DKWeatherService \'DK Weather Service\' has to be installed</string>
    <string name="weather_service_disabled_summary">\'DK Weather Service\' is disabled.\nTo use the weather feature, enable the app DKWeatherService \'DK Weather Service\', and reboot your phone</string>
    <string name="weather_service_disabled_tablet_summary">\'DK Weather Service\' is disabled.\nTo use the weather feature, enable the app DKWeatherService \'DK Weather Service\', and reboot your tablet</string>
    <string name="customize_title">Customize</string>
    <string name="options_title">Options</string>
    <string name="battery_meter_title">Battery meter</string>
    <string name="battery_meter_settings_summary">Customize the battery meter</string>
    <string name="battery_meter_cat_circle_dotted_title">Circle dotted</string>
    <string name="battery_meter_cat_text_charge_icon_title">Percentage text &amp; charging indicator</string>
    <string name="battery_meter_type_title">Meter type</string>
    <string name="battery_meter_type_icon_portrait_title">Battery portrait</string>
    <string name="battery_meter_type_icon_landscape_left_title">Battery landscape left</string>
    <string name="battery_meter_type_icon_landscape_right_title">Battery landscape right</string>
    <string name="battery_meter_type_circle_title">Circle</string>
    <string name="battery_meter_type_arcs_title">Arcs</string>
    <string name="battery_meter_type_text_only_title">Text only</string>
    <string name="battery_meter_show_text_title">Show percentage text</string>
    <string name="battery_meter_show_text_summary">Enable to show the percentage text</string>
    <string name="battery_meter_circle_dot_interval_title">Interval</string>
    <string name="battery_meter_circle_dot_length_title">Length</string>
    <string name="battery_meter_circle_dot_no_dot_summary">The circle won\'t be shown dotted</string>
    <string name="battery_meter_circle_dot_no_dot">No dots</string>
    <string name="battery_meter_circle_dot_1">1</string>
    <string name="battery_meter_circle_dot_2">2</string>
    <string name="battery_meter_circle_dot_3">3</string>
    <string name="battery_meter_circle_dot_4">4</string>
    <string name="battery_meter_circle_dot_5">5</string>
    <string name="battery_meter_circle_dot_6">6</string>
    <string name="battery_meter_circle_dot_7">7</string>
    <string name="battery_meter_circle_dot_8">8</string>
    <string name="battery_meter_circle_dot_9">9</string>
    <string name="battery_meter_circle_dot_10">10</string>
    <string name="battery_meter_cut_out_title">Cut out</string>
    <string name="battery_meter_cut_out_summary">Enable to cut the percentage-text/charging-indicator out of the battery icon, if the battery fill overlaps the percentage-text/charging-indicator.</string>
    <string name="show_title">Show</string>
    <string name="show_on_lock_screen_title">Show on lock screen</string>
    <string name="hide_title">Hide</string>
    <string name="always_title">Always</string>
    <string name="never_title">Never</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="use_theme_colors_title">Use theme colors</string>
    <string name="use_theme_colors_summary">Enable to use colors from the current theme, disable to customize the colors</string>
    <string name="colors_general_title">Colors general</string>
    <string name="colors_general_dark_mode_title">Colors general (light status bar)</string>
    <string name="colors_battery_title">Colors battery status</string>
    <string name="colors_battery_dark_mode_title">Colors battery status (light status bar)</string>
    <string name="colors_background_title">Background colors</string>
    <string name="colors_accent_title">Accent color</string>
    <string name="colors_text_title">Text colors</string>
    <string name="colors_icon_title">Icon colors</string>
    <string name="colors_ripple_title">Ripple effect colors</string>
    <string name="type_title">Type</string>
    <string name="type_text_icon">Text &amp; icon</string>
    <string name="background_title">Background</string>
    <string name="primary_background_title">Primary background</string>
    <string name="secondary_background_title">Secondary background</string>
    <string name="accent_title">Accent</string>
    <string name="text_title">Text</string>
    <string name="text_charge_icon_title">Percentage text &amp; charging indicator</string>
    <string name="icon_title">Icon</string>
    <string name="ripple_title">Ripple effect</string>
    <string name="action_bar_title">Action bar</string>
    <string name="content_title">Content</string>
    <string name="cards_title">Cards</string>
    <string name="normal_title">Normal</string>
    <string name="hidden_title">Hidden</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_centered_title">Centered</string>
    <string name="weather_icon_monochrome_title">Monochrome</string>
    <string name="weather_icon_colored_title">Colored</string>
    <string name="weather_icon_vclouds_title">VClouds</string>
    <string name="notification_icons_title">Notification icons</string>
    <string name="number_of_notification_icons_title">Number of notification icons</string>
    <string name="none_title">None</string>
    <string name="one_title">1</string>
    <string name="two_title">2</string>
    <string name="three_title">3</string>
    <string name="four_title">4</string>
    <string name="five_title">5</string>
    <string name="six_title">6</string>
    <string name="seven_title">7</string>
    <string name="eight_title">8</string>
    <string name="send_title">Send</string>
    <string name="card_title">User interface</string>
    <string name="card_sub_title">Theme &amp; colors</string>
    <string name="card_action_button_1_title">Action 1</string>
    <string name="card_action_button_2_title">Action 2</string>
    <string name="settings_category_ui_title">User interface</string>
    <string name="settings_category_buttons_title">Buttons</string>
    <string name="settings_category_experimental_title">Experimental</string>
    <string name="settings_category_about_software_title">Software Info</string>
    <string name="theme_colors_settings_title">Theme &amp; colors</string>
    <string name="button_settings_title">Buttons</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">%s</string>
    <string name="theme_darkkat_title">DarkKat</string>
    <string name="theme_material_light_title">Material Light</string>
    <string name="theme_blackout_title">Blackout</string>
    <string name="theme_auto_title">Auto day night</string>
    <string name="auto_night_mode_title">Night theme</string>
    <string name="auto_night_mode_summary">%s</string>
    <string name="colors_detailed_weather_view_summary">Choose the colors to colorize the detailed weather view</string>
    <string name="colors_lock_screen_summary">Choose the colors to colorize the text and icons in the lock screen</string>
    <string name="colors_status_bar_summary">Choose the colors to colorize the text and icons in the status bar</string>
    <string name="colors_status_bar_expanded_summary">Choose the colors to colorize the content in the status bar expanded</string>
    <string name="colors_notification_summary">Choose the colors to colorize the notifications</string>
    <string name="colors_navigation_bar_summary">Choose the colors to colorize the icons and ripple effect in the status bar</string>
    <string name="colors_recents_summary">Choose the colors to colorize the Recents</string>
    <string name="colors_lock_screen_colorize_visualizer_title">Colorize music visualizer</string>
    <string name="colors_lock_screen_colorize_visualizer_summary">Enable to colorize the music visualizer on the lock screen</string>
    <string name="colors_ambient_display_battery_text_color_title">Embedded battery percentage text</string>
    <string name="colors_notification_cat_dismiss_all">No notifications &amp; Dismiss all</string>
    <string name="notification_test_settings_title">Test notification</string>
    <string name="notification_test_settings_summary">Configure and show test notifications</string>
    <string name="notification_test_cat_actions_title">Actions</string>
    <string name="notification_test_cat_notification_color_title">Notification color</string>
    <string name="notification_test_list_summary">%s</string>
    <string name="notification_test_type_title">Type</string>
    <string name="notification_test_type_default_title">Default</string>
    <string name="notification_test_type_text_title">Text</string>
    <string name="notification_test_type_picture_title">Picture</string>
    <string name="notification_test_type_inbox_title">Inbox</string>
    <string name="notification_test_type_messaging_title">Message</string>
    <string name="notification_test_type_media_title">Media</string>
    <string name="notification_test_priority_title">Priority</string>
    <string name="notification_test_number_of_actions_title">Number of actions</string>
    <string name="notification_test_show_emphasized_actions_title">Emphasize actions</string>
    <string name="notification_test_show_emphasized_actions_summary">Enable to emphasize action buttons. This indicates a full screen notification like receiving an incomming call. The notification will be shown as heads up.</string>
    <string name="notification_test_show_tombstone_actions_title">Show actions disabled</string>
    <string name="notification_test_show_tombstone_actions_summary">Enable to show actions disabled. This indicates an action button without an action.</string>
    <string name="notification_test_show_reply_action_title">Show reply action</string>
    <string name="notification_test_show_reply_action_summary">Enable to show the first action as an reply action.\nOnce the reply text was send, the notification will be updated and displays the reply text.</string>
    <string name="ambient_display_battery_meter_cut_out_summary">Enable to cut the percentage-text out of the battery icon, if the battery fill overlaps the percentage-text.</string>
    <string name="build_info_title">Build info</string>
</resources>