<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 DarkKat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notification_test_settings_title">

    <ListPreference
        android:key="notification_test_type"
        android:title="@string/notification_test_type_title"
        android:summary="@string/notification_test_list_summary"
        android:entries="@array/notification_test_type_entries"
        android:entryValues="@array/notification_test_type_values"
        android:defaultValue="0" />

    <ListPreference
        android:key="notification_test_priority"
        android:title="@string/notification_test_priority_title"
        android:summary="@string/notification_test_list_summary"
        android:entries="@array/notification_test_priority_entries"
        android:entryValues="@array/notification_test_priority_values"
        android:defaultValue="0" />

    <PreferenceCategory
        android:key="notification_test_cat_actions"
        android:title="@string/notification_test_cat_actions_title">

        <ListPreference
	        android:key="notification_test_number_of_actions"
	        android:title="@string/notification_test_number_of_actions_title"
            android:summary="@string/notification_test_list_summary"
	        android:entries="@array/notification_test_number_of_actions_entries"
	        android:entryValues="@array/notification_test_number_of_actions_values"
            android:defaultValue="0" />

        <SwitchPreference
            android:key="notification_test_show_emphasized_actions"
            android:title="@string/notification_test_show_emphasized_actions_title"
            android:summary="@string/notification_test_show_emphasized_actions_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="notification_test_show_tombstone_actions"
            android:title="@string/notification_test_show_tombstone_actions_title"
            android:summary="@string/notification_test_show_tombstone_actions_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="notification_test_show_reply_action"
            android:title="@string/notification_test_show_reply_action_title"
            android:summary="@string/notification_test_show_reply_action_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_test_cat_notification_color"
        android:title="@string/notification_test_cat_notification_color_title">

        <net.darkkatrom.dkcolorpicker.preference.ColorPickerPreference
            android:key="notification_test_color"
            android:title="@string/color_title" />

    </PreferenceCategory>
</PreferenceScreen>
