<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 DarkKat

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory
        android:key="settings_category_ui"
        android:title="@string/settings_category_ui_title">

        <PreferenceScreen
            android:key="theme_colors_settings"
            android:title="@string/theme_colors_settings_title"
            android:icon="@drawable/ic_settings_theme_colors"
            android:fragment="net.darkkatrom.dksettings.fragments.ThemeColorsSettings" />

        <PreferenceScreen
            android:key="weather_settings"
            android:title="@string/weather_title"
            android:icon="@drawable/ic_settings_weather"
            android:fragment="net.darkkatrom.dksettings.fragments.WeatherSettings" />

        <PreferenceScreen
            android:key="lock_screen_settings"
            android:title="@string/lock_screen_title"
            android:icon="@drawable/ic_settings_lock_screen"
            android:fragment="net.darkkatrom.dksettings.fragments.LockScreenSettings" />

        <PreferenceScreen
            android:key="status_bar_settings"
            android:title="@string/status_bar_title"
            android:icon="@drawable/ic_settings_status_bar"
            android:fragment="net.darkkatrom.dksettings.fragments.StatusBarSettings" />

        <PreferenceScreen
            android:key="quick_settings"
            android:title="@string/qs_title"
            android:icon="@drawable/ic_settings_quick_settings"
            android:fragment="net.darkkatrom.dksettings.fragments.QuickSettings" />

        <PreferenceScreen
            android:key="recents_settings"
            android:title="@string/recents_title"
            android:icon="@drawable/ic_settings_recents"
            android:fragment="net.darkkatrom.dksettings.fragments.RecentsSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_category_app_drawer"
        android:title="@string/settings_category_app_drawer_title">

        <PreferenceScreen
            android:key="app_drawer_shortcuts"
            android:title="@string/app_drawer_shortcuts_title"
            android:icon="@drawable/ic_settings_app_drawer_shortcuts"
            android:fragment="net.darkkatrom.dksettings.fragments.AppDrawerShortcutsSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_category_buttons"
        android:title="@string/settings_category_buttons_title">

        <PreferenceScreen
            android:key="power_menu_settings"
            android:title="@string/power_menu_settings_title"
            android:icon="@drawable/ic_settings_power_button"
            android:fragment="net.darkkatrom.dksettings.fragments.PowerButtonSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_category_about_software"
        android:title="@string/settings_category_about_software_title">

        <PreferenceScreen
            android:key="build_info"
            android:title="@string/build_info_title"
            android:icon="@drawable/ic_settings_about"
            android:fragment="net.darkkatrom.dksettings.fragments.BuildInfo" />

    </PreferenceCategory>
</PreferenceScreen>
