<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 DarkKat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/card_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/card_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/card_title"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/card_sub_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/image_theme_color" />

    <LinearLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/card_sub_title">

        <TextView
            android:id="@+id/card_action_button_1"
            android:minWidth="88dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/card_action_button_1_title"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:background="@drawable/ripple_drawable_rectangle"
            android:clickable="true" />

        <TextView
            android:id="@+id/card_action_button_2"
            android:minWidth="88dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/card_action_button_2_title"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:background="@drawable/ripple_drawable_rectangle"
            android:clickable="true" />

        <Space
            android:id="@+id/card_action_button_2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/card_expand_collapse_icon"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/ic_expand_more"
            android:background="@drawable/ripple_drawable_oval"
            android:clickable="true" />

    </LinearLayout>
</RelativeLayout>
